force-app/main/default/objects/Extra_Activity__c/Extra_Activity__c.object-meta.xml
<CustomObject>
    <label>Extra Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Extra_Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extra Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>