force-app/main/default/objects/Extra_Activity__c/fields/City_Area__c.field-meta.xml
<CustomField>
    <fullName>City_Area__c</fullName>
    <label>City / Area</label>
    <length>120</length>
    <type>Text</type>
</CustomField>