force-app/main/default/objects/Extra_Activity__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <label>Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>