force-app/main/default/objects/Extra_Activity__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting with Manager</fullName>
            </value>
            <value>
                <fullName>Daily Team Gate Meeting</fullName>
            </value>
            <value>
                <fullName>Meeting with Distributor</fullName>
            </value>
            <value>
                <fullName>Meeting at Office</fullName>
            </value>
            <value>
                <fullName>Attended Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>