force-app/main/default/objects/Extra_Activity__c/fields/Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Name__c</fullName>
    <label>Outlet Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>