force-app/main/default/objects/Extra_Activity__c/fields/Start_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Start_Latitude__c</fullName>
    <label>Start Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>