force-app/main/default/objects/Extra_Activity__c/fields/Start_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Start_Longitude__c</fullName>
    <label>Start Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>