force-app/main/default/objects/Extra_Activity__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Extra Activities</relationshipLabel>
    <relationshipName>Extra_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>