force-app/main/default/objects/Extra_Activity__c/validationRules/Activity_Date_Must_Be_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Date_Must_Be_Today</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(), Activity_Date__c &lt;&gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>Activity_Date__c</errorDisplayField>
    <errorMessage>Extra Activities can only be recorded for today&apos;s date.</errorMessage>
</ValidationRule>