force-app/main/default/objects/Extra_Activity__c/validationRules/End_Time_Required_To_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Required_To_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Completed&quot;), ISBLANK(End_Time__c) )</errorConditionFormula>
    <errorMessage>End the activity before saving it.</errorMessage>
</ValidationRule>