force-app/main/default/objects/Extra_Activity__c/validationRules/No_Change_After_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Change_After_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNEW() ), ISPICKVAL( PRIORVALUE(Status__c), &quot;Completed&quot; ) )</errorConditionFormula>
    <errorMessage>This activity is already saved and cannot be changed.</errorMessage>
</ValidationRule>