force-app/main/default/objects/Extra_Activity__c/validationRules/Required_Fields_To_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_To_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Completed&quot;),
  OR(
    AND( ISPICKVAL(Activity_Type__c, &quot;New Outlet Approach&quot;), ISBLANK(Outlet_Name__c) ),
    AND( ISPICKVAL(Activity_Type__c, &quot;Event&quot;), OR( ISBLANK(Event_Name__c), ISBLANK(City_Area__c) ) ),
    AND( ISPICKVAL(Activity_Type__c, &quot;Meeting&quot;), OR( ISBLANK(Meeting_Location__c), ISPICKVAL(Meeting_Type__c, &quot;&quot;) ) ),
    AND( ISPICKVAL(Activity_Type__c, &quot;Others&quot;), ISBLANK(Comment__c) )
  )
)</errorConditionFormula>
    <errorMessage>Fill in all required fields for the selected activity type before saving.</errorMessage>
</ValidationRule>